# esp32-sha256-calculator-worker

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32
main/: CMakeLists.txt  Kconfig.projbuild  comm_manager.c  flow_control.c  gpio_manager.c  i2c_manager.c  main.c  sha256_calculator.c
main/comm/: comm_manager.c
main/comm/driver/: i2c_manager.c  spi_manager.c
main/gpio/: gpio_manager.c
main/include/: flow_control.h  gpio_manager.h  i2c_manager.h  sha256_calculator.h
main/include/comm/: comm_manager.h
main/include/comm/driver/: spi_manager.h
